<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#89cff0">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/titleLogo"
        android:textSize="55sp"
        android:textColor="#000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/titleText"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/home_welcome_guest"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textWelcome"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/option_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#000"/>

    <Button
        android:id="@+id/scanBtnGuest"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/stockBtnGuest"
        android:layout_centerHorizontal="true"
        android:text="@string/scan"
        android:textColor="#fff"
        android:background="#3F51B5"
        android:visibility="gone"/>

    <Button
        android:id="@+id/stockBtnGuest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/textMessage"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/stock"
        android:textColor="#fff"
        android:background="@drawable/rounded_button"
        />

    <Button
        android:id="@+id/clientBtnGuest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/stockBtnGuest"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/client"
        android:textColor="#fff"
        android:background="@drawable/rounded_button"
        />

    <Button
        android:id="@+id/appointmentBtnGuest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/clientBtnGuest"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/appointment"
        android:textColor="#fff"
        android:background="@drawable/rounded_button"
        />

    <Button
        android:id="@+id/priceBtnGuest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/appointmentBtnGuest"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/pricelist"
        android:textColor="#fff"
        android:background="@drawable/rounded_button"
        />


    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/logout"
        android:textColor="#fff"
        android:background="#303030"/>


</RelativeLayout>