<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89cff0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.reece.stockmanagementapp.ClientGuestActivity">


    <TextView
        android:id="@+id/clientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/clientTitle"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/optionMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clientTitle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/option_message"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/optionMessage"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#222"
        android:hint="@string/name"
        android:textColorHint="#9d9d9d"
        android:padding="5dp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#222"
        android:hint="@string/surname"
        android:textColorHint="#9d9d9d"
        android:padding="5dp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/surnameEditText"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#222"
        android:hint="@string/email"
        android:textColorHint="#9d9d9d"
        android:padding="5dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/dobEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#222"
        android:hint="@string/dob"
        android:textColorHint="#9d9d9d"
        android:padding="5dp"
        android:inputType="datetime"
        android:focusableInTouchMode="false" />


    <Button
        android:id="@+id/viewClientBtnGuest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button"
        android:text="@string/viewClient"
        android:textColor="#fff"
        android:layout_above="@+id/blankSpace"
        android:layout_centerHorizontal="true"
       android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/searchClientBtnGuest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button"
        android:text="@string/searchClient"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/viewClientBtnGuest" />

    <Button
        android:id="@+id/returnHomeBtnGuest"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#303030"
        android:text="@string/home"
        android:textColor="#fff" />

    <Space android:id="@+id/blankSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/returnHomeBtnGuest"
        android:layout_marginBottom="45dp"
        android:visibility="invisible"/>

</RelativeLayout>
